# g15tools

./: README
G15Tools++/: README  configure.in
G15Tools++/src/: G15Canvas.cpp  G15Canvas.h  G15Screen.cpp  G15Screen.h  G15Wbmp.cpp  G15Wbmp.h  Makefile.am
G15Tools++/test/: Makefile.am  g15logo.h  test.cpp
g15cat/: AUTHORS  Makefile  Makefile.am  README  bootstrap  configure.ac  display.c  display.h  g15cat.c  g15cat.h
g15cat/doc/: doxy.conf
g15cat/man/: g15cat.1
g15composer/: AUTHORS  ChangeLog  G15Base.cpp  G15Base.h  G15Composer.cpp  G15Composer.h  G15Control.cpp  G15Control.h  Makefile  Makefile.am  README  bootstrap  commands.cpp  composer.h  configure.in  font_8x8.cpp  g15c_logo.h  g15composer.c  g15composer.h  g15composer.l  g15composer.prj  g15composer.pws  g15composer.y  main.cpp  pixel.cpp  pixel.h  screen.cpp  screen.h  text.cpp  text.h  util.cpp  util.h
g15composer/debian/: README.Debian  changelog  control  g15composer.init  rules
g15composer/doc/: g15composer.1
g15composer/examples/: amarok-g15-dcop_cli.pl  amarok-g15-perl.pl  amarok-g15c.sh
g15lcd/: Makefile  README  font_6x4.cpp  font_7x5.cpp  keys.cpp  keys.h  lcd.cpp  lcd.h  main.cpp
lcdproc-g15/: README  g15.c  g15.h  lcdproc-g15.diff
libg15/: AUTHORS  ChangeLog  Makefile  Makefile.am  README  configure.in  libg15.c  libg15.h
libg15/debian/: changelog  control  copyright  rules
libg15/rpm/: libg15.spec
libg15render/: AUTHORS  ChangeLog  Doxyfile  Makefile.am  NEWS  README  configure.in  font_6x4.c  libg15render.3  libg15render.h  pixel.c  screen.c  text.c
libg15render/debian/: changelog  control  libg15render.install  rules
libg15render/fonts/: default-03.fnt
libg15render/src/: Makefile.am  font_7x5.c  font_8x8.c  g15fontconvert.c  libg15render.h  pixel.c  screen.c  text.c
testlibg15/: Makefile  testlibg15.cpp
testlibg15render/: Makefile  testlibg15render.c  testlibg15render.cpp
