#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(G15Composer, 1.1, mirabeaj@gmail.com)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE()
AC_CONFIG_SRCDIR([g15c_logo.h])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for --enable args
AC_MSG_CHECKING(whether to enable FreeType2 support)
AC_ARG_ENABLE(ttf, [  --enable-ttf               enable FreeType2 support],
        if [[[ "$enableval" = "yes" ]]]; then
                AC_DEFINE(TTF_SUPPORT, [1], [Define to 1 to enable FreeType2 support])
                CFLAGS="$CFLAGS `freetype-config --cflags`"
                CXXFLAGS="$CXXFLAGS `freetype-config --cflags`"
                FTLIB="-lfreetype"
                ttf_support="yes"
        else
                ttf_support="no"
        fi,
        ttf_support="no"
)
AC_MSG_RESULT($ttf_support)

# Checks for libraries.
AC_CHECK_LIB([g15daemon_client], [g15_send], ,AC_MSG_ERROR(["libg15daemon_client not found. please install it"]))
AC_CHECK_LIB([g15render], [g15r_initCanvas], ,AC_MSG_ERROR(["libg15render not found. please install it"]))

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h sys/socket.h sys/stat.h libg15.h libg15render.h g15daemon_client.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST

AC_SUBST(FTLIB)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
