#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(G15Composer, 3.2, mirabeaj@gmail.com)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE()
AC_CONFIG_SRCDIR([g15composer.h])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_LEX
AC_PROG_YACC

# Checks for --enable args
AC_MSG_CHECKING(whether to enable FreeType2 support)
AC_ARG_ENABLE(ttf, [  --enable-ttf               enable FreeType2 support],
        if [[[ "$enableval" = "yes" ]]]; then
		AC_CHECK_LIB([g15render], [g15r_ttfLoad],
	                AC_DEFINE(TTF_SUPPORT, [1], [Define to 1 to enable FreeType2 support])
        	        CFLAGS="$CFLAGS `freetype-config --cflags`"
        	        CXXFLAGS="$CXXFLAGS `freetype-config --cflags`"
        	        FTLIB="-lfreetype"
	                ttf_support="yes",
			AC_MSG_ERROR(["libg15render does not support ttf functions. please reconfigure with --enable-ttf"])
			ttf_support="no"
		)
        else
                ttf_support="no"
        fi,
        ttf_support="no"
)
AC_MSG_RESULT($ttf_support)

# Checks for libraries.
AC_CHECK_LIB([g15daemon_client], [g15_send], ,AC_MSG_ERROR(["libg15daemon_client not found. please install it"]))
AC_CHECK_LIB([g15render], [g15r_loadWbmpToBuf], ,AC_MSG_ERROR([">=libg15render-1.2 not found. please install it"]))
AC_CHECK_LIB([pthread], [pthread_create], ,AC_MSG_ERROR(["lpthread not found.  please install it"]))

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h sys/socket.h sys/stat.h libg15.h libg15render.h g15daemon_client.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AC_SUBST(FTLIB)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
