#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(libg15render, 1.3, mirabeaj@gmail.com)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE()
AC_CONFIG_SRCDIR([src/libg15render.h])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for --enable args
AC_MSG_CHECKING(whether to enable FreeType2 support)
AC_ARG_ENABLE(ttf, [  --enable-ttf		enable FreeType2 support],
	if [[[ "$enableval" = "yes" ]]]; then
		AC_DEFINE(TTF_SUPPORT, [1], [Define to 1 to enable FreeType2 support])
		CFLAGS="$CFLAGS `freetype-config --cflags`"
		FTLIB="-lfreetype"
		ttf_support="yes"
	else
		ttf_support="no"
	fi,
	ttf_support="no"
)
AC_MSG_RESULT($ttf_support)

# Checks for libraries.
AC_CHECK_LIB([m], [ceil], ,AC_MSG_ERROR(["libm not found.  Please install it"]))

AC_DEFINE_UNQUOTED([G15FONT_DIR],"${prefix}/share/g15tools/fonts",[Location of G15 fonts])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([string.h ft2build.h])

# Checks for library functions.
AC_HEADER_STDC
AC_CHECK_FUNCS([memset])

AC_SUBST(FTLIB)
AC_CONFIG_FILES([
Makefile
src/Makefile
])

AC_OUTPUT
